fixed the alignment of sidebar and it's buttons

--- a/src/app/dataset-list/dataset-list.component.scss
+++ b/src/app/dataset-list/dataset-list.component.scss
@@ -46,6 +46,10 @@
         width: 300px;
         padding: 25px;
         height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
         p {
           // font-size: 15px;
           font-weight: 500;
@@ -85,14 +89,13 @@
           width: 100%;
           display: flex;
           align-items: center;
-          margin: 20px 0px;
-          // padding: 7px 0px;
+          margin: 20px 0 30px 0;
 
           img {
             width: 20px;
           }
           input {
-            padding-left: 10px;
+            padding: 6px 14px;
             border: none;
           }
         }
@@ -221,3 +224,5 @@
   left: 50%;
   padding: 30px 0;
 }
+
+
